Table categories {
  id uuid [pk]
  name text [not null, unique]
  sort_order int [default: 0]
  created_at timestamptz [default: `now()`]
}

Table subcategories {
  id uuid [pk]
  category_id uuid [not null, ref: > categories.id, note: 'on delete cascade']
  name text [not null]
  sort_order int [default: 0]
  created_at timestamptz [default: `now()`]

  Indexes {
    (category_id, name) [unique] // same-name subcategory allowed in different categories
  }
}

Table skills {
  id uuid [pk]
  subcategory_id uuid [not null, ref: > subcategories.id, note: 'on delete cascade']
  name text [not null]
  level text
  years numeric
  description text
  links jsonb
  sort_order int [default: 0]
  created_at timestamptz [default: `now()`]

  Indexes {
    (subcategory_id, name) [unique] // prevent duplicates within a subcategory
  }
}

Table experiences {
  id uuid [pk]
  company text [not null]
  role text [not null]
  start_date date [not null]
  end_date date
  bullets jsonb
  created_at timestamptz [default: `now()`]
}

Table education {
  id uuid [pk]
  school text [not null]
  degree text [not null]
  start_date date [not null]
  end_date date
  details jsonb
  created_at timestamptz [default: `now()`]
}

Table certifications {
  id uuid [pk]
  name text [not null]
  issuing_organization text [not null]
  issued_at date [not null]
  credential_id text
  credential_url text
  sort_order int [default: 0]
  created_at timestamptz [default: `now()`]
}

Table projects {
  id uuid [pk]
  title text [not null]
  slug text [not null, unique]
  summary text [not null]
  description text
  role text
  hero_image_url text
  additional_image_urls jsonb [default: '[]']
  live_url text
  repo_url text
  is_featured boolean [default: false]
  category text
  sort_order int [default: 0]
  created_at timestamptz [default: `now()`]
}

Table project_tags {
  id uuid [pk]
  project_id uuid [not null, ref: > projects.id, note: 'on delete cascade']
  tag text [not null]
  created_at timestamptz [default: `now()`]

  Indexes {
    (project_id, tag) [unique]
  }
}

Table project_metrics {
  id uuid [pk]
  project_id uuid [not null, ref: > projects.id, note: 'on delete cascade']
  label text [not null]
  value text [not null]
  sort_order int [default: 0]
  created_at timestamptz [default: `now()`]
}
